--- a/Calculo/src/calculo/IntegralGUI.form
+++ b/Calculo/src/calculo/IntegralGUI.form
@@ -104,6 +104,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Graficar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="graficarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="titulo">
       <Properties>
