--- a/Calculo/src/calculo/LimGUI.form
+++ b/Calculo/src/calculo/LimGUI.form
@@ -122,6 +122,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Graficar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="graficarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
